syntax = "proto3";

option csharp_namespace = "MindMatrix.Aggregates";


package AggregateService;

service AggregateService {
    rpc Read (ReadRequest) returns (stream ReadResponse);
    rpc Append(AppendRequest) returns (AppendResponse);
}

message ReadRequest {
    string id = 1;
}

message ReadResponse{
    string id = 1;
    int64 version = 2;
    bytes data = 3;
    bytes metadata = 4;
}

message AppendEvent{
    string id = 1;
    bytes data = 2;
    bytes metadata = 3;
}

message AppendRequest{
    string id = 1;
    int64 expectedVersion = 2;
    repeated AppendEvent events = 3;

}

message AppendResponse{
    int64 commitedVersion = 1;
}
